--- a/app/src/main/res/layout/menu_recycle_row.xml
+++ b/app/src/main/res/layout/menu_recycle_row.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:gravity="top"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
@@ -14,10 +16,10 @@
 
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="252dp"
             android:layout_height="match_parent"
             android:layout_marginStart="140dp"
-            android:layout_marginRight="100dp"
+            android:layout_marginEnd="100dp"
             android:gravity="center_vertical"
             android:orientation="vertical">
 
@@ -29,29 +31,26 @@
                 android:layout_margin="10dp" />
 
             <TextView
-                android:id="@+id/Mzenuname"
-                android:layout_width="wrap_content"
+                android:id="@+id/mzenuname"
+                android:layout_width="228dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="05dp"
                 android:layout_marginEnd="10dp"
                 android:textColor="@color/black"
-                android:textSize="16dp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/MenuPrice"
-                android:layout_width="wrap_content"
+                android:layout_width="227dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="05dp"
                 android:layout_marginEnd="10dp"
                 android:textColor="@color/black"
-                android:textSize="16dp"
-                android:textStyle="bold"
-
-
-                />
+                android:textSize="15dp"
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/addToCardButton"
@@ -93,7 +92,7 @@
                     android:layout_margin="05dp"
                     android:layout_marginEnd="05dp"
                     android:gravity="center_horizontal"
-                    android:text="1"
+                    android:text="15dp"
                     android:textColor="@color/black"
                     android:textSize="16sp"
 
