--- a/app/src/main/res/layout/activity_singin.xml
+++ b/app/src/main/res/layout/activity_singin.xml
@@ -50,7 +50,7 @@
 
 
                 <EditText
-                    android:id="@+id/editTextTextPassword"
+                    android:id="@+id/email"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginBottom="20dp"
@@ -65,7 +65,7 @@
                     tools:ignore="TouchTargetSizeCheck" />
 
                 <EditText
-                    android:id="@+id/editTextTextEmailAddress"
+                    android:id="@+id/Password"
                     android:layout_width="match_parent"
                     android:layout_height="40dp"
                     android:layout_marginBottom="20dp"
@@ -156,7 +156,7 @@
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/creatac"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
